# PyProxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client2.py  config.yaml  pyproject.toml  requirements.txt  server.py  thread_sample.py
.github/workflows/: ci-cd.yaml
loadBalancer/: TESTING.md  config.py  handler.py  health.py  least_connections.py  loadbalancer.py  round_robin.py  routing.py  server.py  stats.py
loadbalancer/: TESTING.md  __init__.py  handler.py  health.py  least_connections.py  loadbalancer.py  round_robin.py  server.py  stats.py  strategy.py
proxy/: client.py  destination_backend.py  proxy.py
