[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproxy-loadbalancer"
version = "0.1.0"
description = "A production-ready, highly modular TCP Proxy and observability-enabled TCP/HTTP Load Balancer."
readme = "README.md"
authors = [
    { name = "Mukul Dixit" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
]
requires-python = ">=3.8"

[project.scripts]
pyproxy = "loadbalancer.loadbalancer:main"
pyproxy-server = "loadbalancer.server:main"

[tool.setuptools]
packages = ["loadbalancer"]
